deploy/retrieveUnpackaged/objects/SFDC_Project__c.object
<CustomObject>
    <description>Project Management</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>R00N50000001oYKXEA2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comp_Approver__c</fullName>
        <inlineHelpText>Who approved the comp?</inlineHelpText>
        <label>Comp Approver</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Comp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N50000001oYKNEA2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DDI_Number__c</fullName>
        <inlineHelpText>Cloud DDI #</inlineHelpText>
        <label>DDI Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expedite_Fee__c</fullName>
        <label>Expedite Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hours_Actual__c</fullName>
        <label>Hours Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Quoted__c</fullName>
        <label>Hours Quoted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lost_Reason__c</fullName>
        <inlineHelpText>Please choose why the engagement was lost.</inlineHelpText>
        <label>Lost Reason</label>
        <picklist>
            <controllingField>SFDC_Project_Stage__c</controllingField>
            <picklistValues>
                <fullName>Needs addl private ip&apos;s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs shared storage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not a fit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bandwidth limitations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing other feature (explain)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (explain)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ongoing_Support_Agreement__c</fullName>
        <description>Denotes who will be doing the support for the agreement.</description>
        <inlineHelpText>Please select who will be providing the ongoing support.</inlineHelpText>
        <label>Ongoing Support Agreement</label>
        <picklist>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>R00N50000001oYKYEA2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Practice_Area__c</fullName>
        <inlineHelpText>Please select the practice area - what is selected here will determine the service offering available.</inlineHelpText>
        <label>Practice Area</label>
        <picklist>
            <picklistValues>
                <fullName>Disaster Recovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network and Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cloud PS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Price_Invoiced__c</fullName>
        <label>Price Invoiced</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_Quoted__c</fullName>
        <label>Price Quoted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reason_Explanation__c</fullName>
        <inlineHelpText>Please enter the explanation for the loss.</inlineHelpText>
        <label>Reason Explanation</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFDC_Days_Remaining__c</fullName>
        <formula>SFDC_Project_End_Date__c -  TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDC_Project_Duration__c</fullName>
        <formula>SFDC_Project_End_Date__c  -  SFDC_Project_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDC_Project_End_Date__c</fullName>
        <label>Project End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SFDC_Project_Name__c</fullName>
        <description>Descriptive Project Name</description>
        <label>Project Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Project_Stage__c</fullName>
        <label>Project Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Start-up</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closing Down</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initial Phone Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SoW Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFDC_Project_Start_Date__c</fullName>
        <label>Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SFDC_Project_Status__c</fullName>
        <label>Project Status</label>
        <picklist>
            <picklistValues>
                <fullName>Planned</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFDC_Status_Description__c</fullName>
        <label>Status Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SFDC_Tech_Manager__c</fullName>
        <label>Tech Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N50000001oYKHEA2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <inlineHelpText>Please provide the sales rep involved with the project.</inlineHelpText>
        <label>Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <description>This is the segment the customer is in.</description>
        <inlineHelpText>Please select a segment where the work will be done.</inlineHelpText>
        <label>Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Managed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intensive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cloud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Offering__c</fullName>
        <inlineHelpText>Please select a service offering.</inlineHelpText>
        <label>Service Offering</label>
        <picklist>
            <controllingField>Practice_Area__c</controllingField>
            <picklistValues>
                <fullName>CBridge Config</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Citrix Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Config</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DNS Managment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LAMP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magento Config</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail Config</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migration Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replication Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSA Two-Factor Authentication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Serv Hardening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Application Firewall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Server Tuning</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Spheres_of_Support__c</fullName>
        <description>Denotes if the support is within the spheres of support.</description>
        <inlineHelpText>Please select if the support is within the spheres of support.</inlineHelpText>
        <label>Spheres of Support</label>
        <picklist>
            <picklistValues>
                <fullName>Inside SoS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outside SoS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ticket_Number__c</fullName>
        <formula>Opportunity__r.Ticket_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ticket Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Paid_to_Date__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Paid to Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Virtual_Device__c</fullName>
        <formula>Opportunity__r.Virtual_Device__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Virtual Device</label>
        <type>Text</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>SFDC_Project_Name__c</columns>
        <columns>SFDC_Project_Stage__c</columns>
        <columns>SFDC_Project_Start_Date__c</columns>
        <columns>SFDC_Project_End_Date__c</columns>
        <columns>SFDC_Tech_Manager__c</columns>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>x0ActiveProjects</fullName>
        <columns>SFDC_Project_Name__c</columns>
        <columns>SFDC_Project_Stage__c</columns>
        <columns>SFDC_Project_Start_Date__c</columns>
        <columns>SFDC_Project_End_Date__c</columns>
        <columns>SFDC_Tech_Manager__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SFDC_Project_Stage__c</field>
            <operation>notEqual</operation>
            <value>Closing Down</value>
        </filters>
        <label>0 - Active Projects</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0000}</displayFormat>
        <label>Project Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <recordTypes>
        <fullName>Cloud_PS</fullName>
        <active>true</active>
        <description>cloud project</description>
        <label>Cloud PS</label>
    </recordTypes>
    <recordTypes>
        <fullName>Managed_Hosting</fullName>
        <active>true</active>
        <description>managed hosting project</description>
        <label>Managed Hosting</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>